# tribbu-automation-framework

./: .env.example  .gitignore  LICENSE  README.md  index.html  pyproject.toml  requirements.txt
.github/workflows/: run_tests.yml
config/capabilities/: android.yaml  ios.yaml
data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
data/attachments/: 33f5cb50bdd1d032.txt  34d2420045b62f47.txt  3ca0a79101d45c9d.txt  3cd4dd92dd5c1b28.txt  3e4f526c6921c2e8.txt  3e6a5d961208623c.txt  4f30abb76b40a73f.txt  5e65952fef19a268.txt  6989e16e880222ba.txt  69a3cfa687b66571.txt  6aa9c6274f5b35a9.txt  78309ee8f32998b0.txt  7e9170590e85bdd8.txt  9521de4c6d4def83.txt  95fcce8504689438.txt  984e1e00b3ee7c7.txt  992fa06863a5d13c.txt  a48f81e33980b1e.txt  a65bcb6f5315c27e.txt  a9e1a3d6a7b2153c.txt  ace315edd23597e8.txt  b2d5e2f4fa6f1e0d.txt  bc12c8d264840b9f.txt  bc25f8c068f71d7.txt  c00881aef27dc5c1.txt  e9218a0c0ce69f03.txt  f150ca591c18a449.txt  f4ef27d1c3829d1e.txt  ff29027beecf92d8.txt
data/test-cases/: 19433c2a3cdd103d.json  1c1d92e185a5d3c.json  294145a016aafd8.json  3139726454a0303b.json  3a90a92581a226be.json  3c69df4790fa17c0.json  3d019a194c411d59.json  60d279bf3ecbf175.json  a21e52c0c1fe16cf.json  (+6 more)
export/: influxDbData.txt  prometheusData.txt
history/: duration-trend.json  history.json
recordings/: navigation_test.jsonl  onboarding_test.jsonl
tests/: conftest.py
tribbu/: __init__.py
widgets/: behaviors.json  duration-trend.json  duration.json  severity.json  status-chart.json  suites.json  summary.json
(+12 files in other folders)
